syntax = "proto3";
package search.v1;

option go_package = "./api";

service SearchService {
  rpc SearchTopFive(SearchTopFiveRequest) returns (SearchTopFiveResponse);
  rpc SearchAll(SearchAllRequest) returns (SearchAllResponse);
}

message SearchTopFiveRequest {
  string query = 1;
}
message SearchTopFiveResponse {
  message Results {
    string inv_mast_uid = 1;
    string item_id = 2;
    string item_desc = 3;
    string product_group_id = 4;
  }
  repeated Results search_results = 1;
}
message SearchAllRequest {
  // Query to search by
  string query = 1;
  // Filters by selected product groups
  repeated string product_groups = 2;
  // Page number to request
  string page_number = 3;
}
message SearchAllResponse {
  message Facets {
    // Product group to apply to filters
    message ProductGroup{
      // Name of product group
      string name = 1;
      // Items from query within product group
      string count = 2;
    }
    // List of product groups that can be filtered
    repeated ProductGroup product_groups = 1;
  }
  message Results {
    // Unique Identifier of product
    string inv_mast_uid = 1;
    // Item ID of Product
    string item_id = 2;
    // The name of the product
    string item_desc = 3;
    // The product group the item belongs to
    string product_group_id = 4;
  }
  // Facets that can be applied to the query
  Facets facets = 1;
  // A list of products the search returns
  repeated Results search_results = 2;
  // Total amount of pages the query has
  string total_pages = 3;
}
